# Postfish

./: .gitignore  Makefile  Makefile.am  README  README.md  autogen.sh  barwidget.c  bessel.c  bessel.h  buttonicons.h  clippanel.c  clippanel.h  compandpanel.c  compandpanel.h  compat.h  config.c  config.h  configure.in  declip.c  declip.h  deverb.c  deverb.h  deverbpanel.c  deverbpanel.h  eq.c  eq.h  eqpanel.c  eqpanel.h  feedback.c  feedback.h  fisharray.h  follower.c  follower.h  form.c  form.h  freeverb.c  freeverb.h  freq.c  freq.h  input.c  (+65 more)
.github/workflows/: ci_ubuntu.yml
